--- a/src/Module 10/Best Practices & Industry Case Studies/Ques_4.ipynb
+++ b/src/Module 10/Best Practices & Industry Case Studies/Ques_4.ipynb
@@ -19,17 +19,184 @@
    "source": [
     "# write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Generating Healthcare Data...\n",
+      "🛡️ Validating Data...\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Data validation failed: ['Negative cholesterol values found']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 127\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;66;03m# --- Main Entry ---\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 127\u001b[0m     \u001b[43mrun_pipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m🧪 Running Tests...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    129\u001b[0m     unittest\u001b[38;5;241m.\u001b[39mmain(argv\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m], exit\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[1], line 74\u001b[0m, in \u001b[0;36mrun_pipeline\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m df \u001b[38;5;241m=\u001b[39m generate_healthcare_data()\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🛡️ Validating Data...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 74\u001b[0m \u001b[43mvalidate_healthcare_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m⚙️ Preprocessing...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     77\u001b[0m X, y \u001b[38;5;241m=\u001b[39m preprocess_data(df)\n",
+      "Cell \u001b[0;32mIn[1], line 38\u001b[0m, in \u001b[0;36mvalidate_healthcare_data\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     35\u001b[0m     errors\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNegative heart rate values found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m errors:\n\u001b[0;32m---> 38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData validation failed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merrors\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Data validation failed: ['Negative cholesterol values found']"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "import unittest\n",
+    "\n",
+    "# --- Step 1: Simulated Healthcare Data (e.g., predicting disease from vitals/lab tests) ---\n",
+    "def generate_healthcare_data():\n",
+    "    np.random.seed(0)\n",
+    "    size = 1000\n",
+    "    data = pd.DataFrame({\n",
+    "        'Age': np.random.randint(18, 90, size),\n",
+    "        'Blood_Pressure': np.random.normal(120, 15, size),\n",
+    "        'Cholesterol': np.random.normal(200, 30, size),\n",
+    "        'Heart_Rate': np.random.normal(75, 10, size),\n",
+    "        'Diabetes': np.random.choice([0, 1], size=size, p=[0.85, 0.15]),  # target variable\n",
+    "    })\n",
+    "\n",
+    "    # Introduce some invalid data to test validation\n",
+    "    data.loc[5, 'Age'] = 200       # Invalid age\n",
+    "    data.loc[10, 'Cholesterol'] = -50  # Invalid cholesterol\n",
+    "    return data\n",
+    "\n",
+    "# --- Step 2: Validation Rules for Data Quality ---\n",
+    "def validate_healthcare_data(df):\n",
+    "    errors = []\n",
+    "    if df['Age'].between(0, 120).mean() < 0.99:\n",
+    "        errors.append(\"Age out of valid range (0-120)\")\n",
+    "    if (df['Blood_Pressure'] < 0).any():\n",
+    "        errors.append(\"Negative blood pressure values found\")\n",
+    "    if (df['Cholesterol'] < 0).any():\n",
+    "        errors.append(\"Negative cholesterol values found\")\n",
+    "    if (df['Heart_Rate'] < 0).any():\n",
+    "        errors.append(\"Negative heart rate values found\")\n",
+    "    \n",
+    "    if errors:\n",
+    "        raise ValueError(f\"Data validation failed: {errors}\")\n",
+    "    return True\n",
+    "\n",
+    "# --- Step 3: Preprocessing ---\n",
+    "def preprocess_data(df):\n",
+    "    df_clean = df[(df['Age'] <= 120) & (df['Cholesterol'] >= 0)]\n",
+    "    X = df_clean.drop('Diabetes', axis=1)\n",
+    "    y = df_clean['Diabetes']\n",
+    "    return X, y\n",
+    "\n",
+    "# --- Step 4: Splitting Data ---\n",
+    "def split_data(X, y):\n",
+    "    return train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+    "\n",
+    "# --- Step 5: Model Training ---\n",
+    "def train_model(X_train, y_train):\n",
+    "    model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    return model\n",
+    "\n",
+    "# --- Step 6: Evaluation ---\n",
+    "def evaluate_model(model, X_test, y_test):\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    if acc < 0.85:\n",
+    "        raise ValueError(\"Model accuracy below acceptable threshold\")\n",
+    "    print(f\"✅ Model Accuracy: {acc:.2f}\")\n",
+    "    return acc\n",
+    "\n",
+    "# --- Pipeline Execution ---\n",
+    "def run_pipeline():\n",
+    "    print(\"🔍 Generating Healthcare Data...\")\n",
+    "    df = generate_healthcare_data()\n",
+    "\n",
+    "    print(\"🛡️ Validating Data...\")\n",
+    "    validate_healthcare_data(df)\n",
+    "\n",
+    "    print(\"⚙️ Preprocessing...\")\n",
+    "    X, y = preprocess_data(df)\n",
+    "\n",
+    "    print(\"✂️ Splitting Data...\")\n",
+    "    X_train, X_test, y_train, y_test = split_data(X, y)\n",
+    "\n",
+    "    print(\"🎯 Training Model...\")\n",
+    "    model = train_model(X_train, y_train)\n",
+    "\n",
+    "    print(\"📊 Evaluating Model...\")\n",
+    "    evaluate_model(model, X_test, y_test)\n",
+    "\n",
+    "    print(\"✅ Pipeline completed successfully.\")\n",
+    "\n",
+    "# --- Unit Tests for Validation and Preprocessing ---\n",
+    "class TestMedicalPredictionPipeline(unittest.TestCase):\n",
+    "\n",
+    "    def test_valid_data_pass(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'Age': [25, 40, 60],\n",
+    "            'Blood_Pressure': [110, 120, 130],\n",
+    "            'Cholesterol': [180, 200, 220],\n",
+    "            'Heart_Rate': [70, 72, 74],\n",
+    "            'Diabetes': [0, 1, 0]\n",
+    "        })\n",
+    "        self.assertTrue(validate_healthcare_data(df))\n",
+    "\n",
+    "    def test_invalid_age_fails(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'Age': [25, 140, 60],\n",
+    "            'Blood_Pressure': [110, 120, 130],\n",
+    "            'Cholesterol': [180, 200, 220],\n",
+    "            'Heart_Rate': [70, 72, 74],\n",
+    "            'Diabetes': [0, 1, 0]\n",
+    "        })\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            validate_healthcare_data(df)\n",
+    "\n",
+    "    def test_preprocessing_removes_invalid_rows(self):\n",
+    "        df = pd.DataFrame({\n",
+    "            'Age': [25, 200],\n",
+    "            'Blood_Pressure': [110, 120],\n",
+    "            'Cholesterol': [180, -10],\n",
+    "            'Heart_Rate': [70, 72],\n",
+    "            'Diabetes': [0, 1]\n",
+    "        })\n",
+    "        X, y = preprocess_data(df)\n",
+    "        self.assertEqual(len(X), 1)\n",
+    "\n",
+    "# --- Main Entry ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_pipeline()\n",
+    "    print(\"\\n🧪 Running Tests...\")\n",
+    "    unittest.main(argv=[''], exit=False)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
